--- a/IPCapture/IPCapture/MainWindow.xaml
+++ b/IPCapture/IPCapture/MainWindow.xaml
@@ -5,32 +5,35 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IPCapture"
         mc:Ignorable="d"
-        Title="MainWindow" Height="164.655" Width="232.759" WindowStyle="None" Opacity="0.805" Background="#FFC20C0C" Foreground="White" FontFamily="Arial" FontSize="14" FontWeight="Bold" FontStretch="UltraExpanded" TextOptions.TextFormattingMode="Display" BorderThickness="0"
-        Loaded="Window_Loaded" ResizeMode="NoResize" WindowStartupLocation="Manual">
+        Title="MainWindow" Height="164.655" Width="363.759" WindowStyle="None" Opacity="0.8" Background="#FFC20C0C" Foreground="White" FontFamily="Arial" FontSize="14" FontWeight="Bold" FontStretch="UltraExpanded" TextOptions.TextFormattingMode="Display" BorderThickness="0"
+        Loaded="Window_Loaded" WindowStartupLocation="Manual" AllowsTransparency="True">
     <Window.OpacityMask>
         <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
             <GradientStop Color="Black"/>
             <GradientStop Color="#B2420000" Offset="1"/>
         </LinearGradientBrush>
     </Window.OpacityMask>
-    <Grid HorizontalAlignment="Left" Width="233" RenderTransformOrigin="-0.044,0.895" Margin="0,0,-6.6,1">
+    <Grid HorizontalAlignment="Left" RenderTransformOrigin="-0.044,0.895" Margin="0" VerticalAlignment="Center" Height="Auto" Width="Auto">
         <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="78*"/>
-            <ColumnDefinition Width="145*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <Label x:Name="IPv4_key" Content="IPv4:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.613,2.492" Height="Auto" Foreground="White"/>
-        <Label x:Name="External_key" Content="External:" HorizontalAlignment="Left" Margin="10,8,0,0" VerticalAlignment="Top" Width="Auto" RenderTransformOrigin="0.613,2.492" Height="Auto" Grid.Row="2" Foreground="White"/>
-        <Label x:Name="IPv4_val" Content="-" Grid.Column="1" HorizontalAlignment="Left" Margin="9.4,10,0,0" VerticalAlignment="Top" Width="Auto" Height="Auto" Foreground="White"/>
-        <Label x:Name="External_val" Content="-" Grid.Column="1" HorizontalAlignment="Left" Margin="9.4,10,0,0" VerticalAlignment="Top" Width="Auto" Grid.Row="2" Height="Auto" Foreground="White"/>
-        <Label x:Name="MAC_key" Content="MAC:" HorizontalAlignment="Left" Margin="10,10.2,0,0" VerticalAlignment="Top" Width="Auto" RenderTransformOrigin="0.613,2.492" Height="Auto" Grid.Row="3" Foreground="White"/>
-        <Label x:Name="MAC_val" Content="-" Grid.Column="1" HorizontalAlignment="Left" Margin="10.4,10.2,0,0" VerticalAlignment="Top" Width="Auto" Grid.Row="3" Height="Auto" Foreground="White"/>
-        <Label x:Name="IPv6_key" Content="IPv6:" HorizontalAlignment="Left" Margin="10,9.8,0,0" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.613,2.492" Height="Auto" Foreground="White" Grid.Row="1"/>
-        <Label x:Name="IPv6_val" Content="-" Grid.Column="1" HorizontalAlignment="Left" Margin="9.4,9.8,0,0" VerticalAlignment="Top" Width="Auto" Height="Auto" Foreground="White" Grid.Row="1"/>
+        <Label x:Name="IPv4_key" Content="IPv4:" VerticalAlignment="Center" RenderTransformOrigin="0.613,2.492" Foreground="White" Margin="10,0,49,0" HorizontalAlignment="Left"/>
+        <Label x:Name="IPv4_val" Content="-" Grid.Column="1" HorizontalAlignment="Left" Margin="9,4,0,7" VerticalAlignment="Center" Foreground="White"/>
+        <Label x:Name="ExternalIP_val" Content="-" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="2" Foreground="{x:Null}" Margin="9,7,0,0" Opacity="0.805" Background="{x:Null}"/>
+        <Label x:Name="MAC_key" Content="MAC:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" RenderTransformOrigin="0.613,2.492" Grid.Row="4" Foreground="White"/>
+        <Label x:Name="MAC_val" Content="-" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Grid.Row="4" Foreground="White"/>
+        <Label x:Name="IPv6_key" Content="IPv6:" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Center" RenderTransformOrigin="0.613,2.492" Foreground="White" Grid.Row="1" Height="26"/>
+        <Label x:Name="IPv6_val" Content="-" Grid.Column="1" HorizontalAlignment="Left" Margin="9,10,0,0" VerticalAlignment="Center" Foreground="White" Grid.Row="1"/>
+        <Label x:Name="DefaultGateway_key" Content="Default Gateway:" RenderTransformOrigin="0.613,2.492" Grid.Row="3" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,5,0,1"/>
+        <Label x:Name="ExternalIP_key" Content="External IP:" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Center" RenderTransformOrigin="0.613,2.492" Foreground="White" Grid.Row="2" VerticalContentAlignment="Bottom"/>
+        <Label x:Name="DefaultGateway_val" Content="-" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="3" Foreground="White" Margin="9,5,0,1"/>
     </Grid>
 </Window>
