--- a/IPCapture/IPCapture/MainWindow.xaml
+++ b/IPCapture/IPCapture/MainWindow.xaml
@@ -5,21 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IPCapture"
         mc:Ignorable="d"
-        Title="IPCapture_GUI" WindowStyle="None" Opacity="0.95" Background="Transparent" Foreground="White" FontFamily="Arial" FontSize="14" FontWeight="Bold" FontStretch="UltraExpanded" TextOptions.TextFormattingMode="Display" BorderThickness="0"
-        Loaded="Window_Loaded" WindowStartupLocation="Manual" AllowsTransparency="True" Height="287.892" Width="416.413">
+        Title="IPCapture_GUI" Opacity="0.95" Background="Transparent" Foreground="White" FontFamily="Arial" FontSize="14" FontWeight="Bold" FontStretch="UltraExpanded" TextOptions.TextFormattingMode="Display" BorderThickness="0"
+        Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" Height="Auto" Width="Auto" Cursor="Arrow" WindowStyle="None" AllowsTransparency="True" MouseLeftButtonDown="Window_MouseLeftButtonDown" Topmost="True" ResizeMode="CanResizeWithGrip" SizeToContent="WidthAndHeight">
     <Window.OpacityMask>
         <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
             <GradientStop Color="Black"/>
             <GradientStop Color="#B2420000" Offset="1"/>
         </LinearGradientBrush>
     </Window.OpacityMask>
-    <Border CornerRadius="5" Background="#FFC20C0C" HorizontalAlignment="Left" VerticalAlignment="Top" Width="400" Height="278">
-        <Grid x:Name="GridMain" HorizontalAlignment="Left" Height="268" VerticalAlignment="Top" Width="390" Margin="0,10,0,0">
+    <Border CornerRadius="5" Background="#FFC20C0C">
+        <Grid x:Name="GridMain" Margin="0">
             <Grid.RowDefinitions>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="106*"/>
-                <ColumnDefinition Width="285*"/>
+                <ColumnDefinition x:Name="Keys" Width="Auto"/>
+                <ColumnDefinition x:Name="Values" Width="Auto"/>
             </Grid.ColumnDefinitions>
         </Grid>
         <Border.Effect>
