--- a/NetworkCapture/NetworkCapture/App.xaml
+++ b/NetworkCapture/NetworkCapture/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="NetworkCapture.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:IPCapture"
+             xmlns:local="clr-namespace:NetworkCapture"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
